## Changelog 02/03/2020
Création d'une branche dans Git.
Evolution de la gestion du fichier de programmation des séquences.
Afin de simplifier son utilisation on va modifier la gestion des heures de fin et de début avec la référence à C1,C2,Max,C3 et C4.
Ajout d'une ligne de configuration avec la valeur du mode de test, les valeurs des C* et Max


## Changelog 01/03/2020
#Readme.md
Description du fichier de programmation.
Documentation sur le mode test et le fichier de log.

## Changelog 29/02/2020
#MLua_mount_imgSD
Création d'un script de montage des images des cartes SD pour Qemu et de copie d'un fichier
Ajout de commentaires dans les scripts MLua_PIC et MLua_Test
# SOLARECL.TXT
Modification des séparateurs utilisation de "," et ":" pour améliorer la lisibilité
# eclipse_OZ.lua
Modification de la fonction read_script pour prise en compte des séparateurs "," et ":"
Passage en variable de la version du directory et du fichier de schedule.

## Changelog 27/02/2020
Chargement et interprétation des lignes pour lancement des cycles.
Affichage d'une box Waiting pendant les attentes.

## Changelog 26/02/2020
Corrections cosmétiques

## Changelog 26/02/2020
# Script MLua_Test.sh
Création du script MLua_Test.sh pour automatiser la copie sur la carte SD
# Script MLua_PIC.sh
Gestion de la présence d'une carte SD montée
Amélioration des contrôles
Récupération des log
# eclipse_OZ.lua
Amélioration des log avec l'ajout de l'heure en début de ligne
Création de la fonction boucle avec traitement du mirroir et gestion de la sortie
Factorisation de la configuration du MLU
Fonction de lecture du script
Fonction de conversion hh:mm:ss en secondes
Chargement des variables
# SOLARECL.TXT
Création du fichier script de déroulement des actions
C'est un fichier CSV avec comme séparateur le ; et le # pour commenter
Lire l'entête pour la signification des colonnes