@@ -5,5 +5,6 @@ eclipse_ML.lua
 Script AFA 2017.txt
 Test-lecture-fichier.lua
 Text Editor.lua
+SOLAREC1.TXT
 .vscode/
 tmp/
