@@ -20,42 +20,90 @@ La séquence de photos est décrite dans un fichier texte SOLARECL.TXT.
 Chaque séquence est décrite sur une ligne composée de paramètres séparés par une virgule "," ou un double point ":".
 Il faut respecter les règles suivantes
 * Pas de ligne vide
+* Pas de paramètre vide, y mettre -
 * \# pour commenter une ligne
 * Les séquences doivent se suivre temporellement. Le fichier n'est lu que dans un sens. 
 
-### Syntaxe
+Trois type de lignes sont possibles, Config, Boucle ou Photo.
+
+### Syntaxe de la ligne Config
+La ligne décrit la config de la manière suivante :
+       C1    C2    Max   C3    C4
+Config,H:M:S,H:M:S,H:M:S,H:M:S,H:M:S,TestMode
+
+### Description des champs
+Position|Nom|Valeur|Description
+:---:|:---:|:---:|:---
+1|Action|Config|Ligne de définition des circonstances locales de l'éclipse
+2|Hd|0-23|Heure du premier contact
+3|Md|0-59|Minute du premier contact
+4|Sd|0-59|Seconde du premier contact
+5|Hd|0-23|Heure du deuxième contact
+6|Md|0-59|Minute du deuxième contact
+7|Sd|0-59|Seconde du deuxième contact
+8|Hd|0-23|Heure du maximum
+9|Md|0-59|Minute du maximum
+10|Sd|0-59|Seconde du maximum
+11|Hd|0-23|Heure du troisième contact
+12|Md|0-59|Minute du troisième contact
+13|Sd|0-59|Seconde du troisième contact
+14|Hd|0-23|Heure du quatrième contact
+15|Md|0-59|Minute du quatrième contact
+16|Sd|0-59|Seconde du quatrième contact
+17|TestMode|0 ou 1|Active/Désactive le mode de test
+
+#### Exemple
+Config : C1 = 14h41m05s C2 = 16h02m49s Max = 16h03m53s C3 = 16h04m58s C4 = 17h31m03s TestMode = actif
+`Config,14:41:05,16:02:49,16:03:53,16:04:58,17:31:03,1`
+
+### Syntaxe en heure absolue
 Chaque ligne décrit une séquence de la manière suivante :
 
-`Action,Hd:Md:Sd,Hf:Mf:Sf,Interval,Aperture,ISO,ShutterSpeed,MLUDelay`
+`Action,-,-,Hd:Md:Sd,-,Hf:Mf:Sf,Interval,Aperture,ISO,ShutterSpeed,MLUDelay`
 
+### Syntaxe en heure relative
+Chaque ligne décrit une séquence de la manière suivante :
+
+`Action,C1,+,Hd:Md:Sd,+,Hf:Mf:Sf,Interval,Aperture,ISO,ShutterSpeed,MLUDelay`
+
+### Description des champs
 Position|Nom|Valeur|Description
 :---:|:---:|:---:|:---
 1|Action|Boucle ou Photo|Suite de photos identiques ou photo unique
-2|Hd|0-23|Heure de début de la séquence
-3|Md|0-59|Minute de début de la séquence
-4|Sd|0-59|Seconde de début de la séquence
-5|Hf|0-23|Heure de fin de la séquence (*)
-6|Mf|0-59|Minute de fin de la séquence (*)
-7|Sf|0-59|Seconde de fin de la séquence (*)
-8|Interval|Num.|Intervalle entre deux photos en seconde (*)
-9|Aperture|Diaph.|Valeur du Diaphragme (2.8,8,11...)(**)
-10|ISO|Num.|Sensibilité du capteur (100, 800, 6400,...)(**)
-11|ShutterSpeed|Num.|Vitesse d'exposition en seconde (**)
-12|MLUDelay|Num.|Délais d'attente entre la montée du mirroir et le déclenchement, en miliseconde. Si 0 pas de montée du mirroir avant le déclenchement. 
+2|Ref|C1,C2,Max,C3,C4|Indique le point de référence, mettre un "-" si en mode absolu
+3|Oper|+ ou -|Ajoute ou soustrait l'heure de début à la Ref
+4|Hd|0-23|Heure de début de la séquence
+5|Md|0-59|Minute de début de la séquence
+6|Sd|0-59|Seconde de début de la séquence
+7|Oper|+ ou -|Ajoute ou soustrait l'heure de fin à la Ref
+8|Hf|0-23|Heure de fin de la séquence (*)
+9|Mf|0-59|Minute de fin de la séquence (*)
+10|Sf|0-59|Seconde de fin de la séquence (*)
+11|Interval|Num.|Intervalle entre deux photos en seconde (*)
+12|Aperture|Diaph.|Valeur du Diaphragme (2.8,8,11...)(**)
+13|ISO|Num.|Sensibilité du capteur (100, 800, 6400,...)(**)
+14|ShutterSpeed|Num.|Vitesse d'exposition en seconde (**)
+15|MLUDelay|Num.|Délais d'attente entre la montée du mirroir et le déclenchement, en miliseconde. Si 0 pas de montée du mirroir avant le déclenchement. 
 
 (*) Uniquement utilisé par l'action "Boucle"  
 (**) Attention prendre des valeurs compatible avec votre équipement
 
 #### Exemples
 
-Série de 21:22:05 à 21:25:35, une photo toutes les 5s, Diaph=8, ISO=200, Vitesse 1/2000, pas de Mirror lockup.  
->`Boucle,21:22:05,21:25:35,5,8,200,0.0005,0`  
+Mode absolu, série de 21:22:05 à 21:25:35, une photo toutes les 5s, Diaph=8, ISO=200, Vitesse 1/2000, pas de Mirror lockup.  
+>`Boucle,-,-,21:22:05,-,21:25:35,5,8,200,0.0005,0`
+
+Mode relatif, série de 00:20:00 avant C2 à 00:01:30 après C2, une photo toutes les 5s, Diaph=8, ISO=200, Vitesse 1/2000, pas de Mirror lockup.  
+>`Boucle,C2,-,00:20:00,+,00:01:30,5,8,200,0.0005,0`
 
 Ligne de commentaire.  
 >`# Commentaire`  
 
-Photo à 21:22:40, Diaph=4, ISO=1600, Vitesse 1, Mirror lockup avec 0,5s de délais.
->`Photo,21:22:40,-,-,-,-,4,1600,1,500`
+Mode absolu, photo à 21:22:40, Diaph=4, ISO=1600, Vitesse 1, Mirror lockup avec 0,5s de délais.
+>`Photo,-,-,21:22:40,-,-,-,-,-,4,1600,1,500`
+
+Mode relatif photo 01:10:30 avant C1, Diaph=4, ISO=1600, Vitesse 1, Mirror lockup avec 0,5s de délais.
+>`Photo,C1,-,01:10:30,-,-,-,-,-,4,1600,1,500`
 
 ## Lancement de la séquence
 * Choisir le menu script.  
@@ -80,12 +128,27 @@ La configuration MLU Mirror Lockup est piloté par le script mais il est possibl
 # Configurations
 ## Mode test
 Pour tester le script il est possible d'utiliser le mode Test. Ce mode déroule le script normalement mais ne déclenche pas les photos.  
-Pour activer ce mode, modifier la variable TestMode dans le script __eclipse_OZ.lua__.
->`TestMode = 1`
-
-0 => mode réel  
-1 => mode test
+Pour activer/désactiver ce mode, modifier le champ TestMode dans la ligne Config.
+* 0 => mode réel  
+* 1 => mode test
 
 # Fichier log
 A chaque lancement de séquence, un fichier log __ECLIPSE.LOG__ est créé à la racine de la carte SD.  
 Toutes les actions de la séquence sont loggés dans le fichier.
+```
+===============================================================================
+ML/SCRIPTS/ECLIPS~1.LUA - 2020-3-5 23:28:19
+===============================================================================
+
+==> eclipse_OZ.lua - Version : 2.0
+23:28:19 - Log begin.
+23:28:19 - Script ML/SCRIPTS/SOLARECL.TXT loading.
+23:28:19 - Table of 9 lines and 15 columns loaded.
+23:28:19 - Action: Config C1: 14:41:05/52865s C2: 16:02:49/57769s Max: 16:03:53/57833s C3: 16:04:58/57898s C4: 17:31:03/63063s TestMode: 1
+23:28:19 - Set test mode : 1
+23:28:19 - Line 1 finish go to the next line.
+23:28:19 - Conversion : C1 soit 52865 - 120 = 52745 soit 14:39:05
+23:28:19 - Conversion : C1 soit 52865 + 30 = 52895 soit 14:41:35
+23:28:19 - Action: Boucle TimeRef: C1 OperStart: - TimeStart: 00:02:00-52745s OperEnd: + TimeEnd: 00:00:30-52895s Interval: 20s Aperture 8 ISO 800 ShutterSpeed: 0.0005s MluDelay: 500s
+23:28:19 - Set mirror lockup ON. Delay = 500
+```
